Move changes to LESS version
add gulp 'less' task
add gulp 'postprocess' task
move browserslist to 'package.json'
remove '-{small,medium,large}' potato postfix

--- a/examples/buttons.html
+++ b/examples/buttons.html
@@ -1,6 +1,6 @@
 <div id="button-example">
 	<div class="row">
-		<div class="twelve-large potatoes">
+		<div class="twelve potatoes">
 			<h1 class="font-bold">Buttons</h1>
 			<p>Default button classes</p>
 			<a href="#" class="button">Default</a>
@@ -9,7 +9,7 @@
 			<a href="#" class="button warning">Warning</a>
 			<a href="#" class="button danger">Danger</a>
 		</div>
-		<div class="twelve-large potatoes">
+		<div class="twelve potatoes">
 			<a href="#" class="button full">Default</a>
 			<a href="#" class="button full primary">Primary</a>
 			<a href="#" class="button full success">Success</a>
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="six-large potatoes">
+		<div class="six potatoes">
 			<p>Button sizing</p>
 			<div>
 				<a href="#" class="button small">Small</a>
@@ -31,7 +31,7 @@
 				<a href="#" class="button full small danger">Small</a>
 			</div>
 		</div>
-		<div class="six-large potatoes">
+		<div class="six potatoes">
 			<p>Button expanded</p>
 			<a href="#" class="button expanded">Expanded</a>
 			<a href="#" class="button success expanded">Expanded</a>
