--- a/examples/code.html
+++ b/examples/code.html
@@ -1,6 +1,6 @@
 <div id="code-example">
 	<div class="row">
-		<div class="twelve-large potatoes">
+		<div class="twelve potatoes">
 			<h1 class="font-bold">Code</h1>
 
 			<h3>Inline code</h3>
