--- a/examples/grid.html
+++ b/examples/grid.html
@@ -1,99 +1,99 @@
 <div id="grid-example">
 	<div class="row">
-		<div class="twelve-large potatoes">
+		<div class="twelve potatoes">
 			<p>twelve large potatoes</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="one-large potatoes">
+		<div class="one potatoes">
 			<p>one</p>
 		</div>
-		<div class="eleven-large potatoes">
+		<div class="eleven potatoes">
 			<p>eleven</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="two-large potatoes">
+		<div class="two potatoes">
 			<p>two</p>
 		</div>
-		<div class="ten-large potatoes">
+		<div class="ten potatoes">
 			<p>ten</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="three-large potatoes">
+		<div class="three potatoes">
 			<p>three</p>
 		</div>
-		<div class="nine-large potatoes">
+		<div class="nine potatoes">
 			<p>nine</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<p>four</p>
 		</div>
-		<div class="eight-large potatoes">
+		<div class="eight potatoes">
 			<p>eight</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="five-large potatoes">
+		<div class="five potatoes">
 			<p>five</p>
 		</div>
-		<div class="seven-large potatoes">
+		<div class="seven potatoes">
 			<p>seven</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="six-large potatoes">
+		<div class="six potatoes">
 			<p>six</p>
 		</div>
-		<div class="six-large potatoes">
+		<div class="six potatoes">
 			<p>six</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="seven-large potatoes">
+		<div class="seven potatoes">
 			<p>seven</p>
 		</div>
-		<div class="five-large potatoes">
+		<div class="five potatoes">
 			<p>five</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="eight-large potatoes">
+		<div class="eight potatoes">
 			<p>eight</p>
 		</div>
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<p>four</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="nine-large potatoes">
+		<div class="nine potatoes">
 			<p>nine</p>
 		</div>
-		<div class="three-large potatoes">
+		<div class="three potatoes">
 			<p>three</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="ten-large potatoes">
+		<div class="ten potatoes">
 			<p>ten</p>
 		</div>
-		<div class="two-large potatoes">
+		<div class="two potatoes">
 			<p>two</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="eleven-large potatoes">
+		<div class="eleven potatoes">
 			<p>eleven</p>
 		</div>
-		<div class="one-large potato">
+		<div class="one potato">
 			<p>one</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="twelve-large potatoes">
+		<div class="twelve potatoes">
 			<p>twelve</p>
 		</div>
 	</div>
