--- a/examples/index.html
+++ b/examples/index.html
@@ -54,7 +54,7 @@
 
     <div id="header">
       <div class="row">
-        <div class="text-center twelve-large potatoes">
+        <div class="text-center twelve potatoes">
           <img src="logo.png" />
           <h1>PotatoCSS</h1>
           <h3>Simple CSS framework for hackers. Simple as potato.</h3>
@@ -64,14 +64,14 @@
 
     <div id="description">
       <div class="row">
-        <div class="eight-large potatoes">
+        <div class="eight potatoes">
           <h4>Description</h4>
           <p><a href="https://github.com/ummahusla/PotatoCSS">PotatoCSS</a> is a beautiful CSS framework for hackers. It's clean, simple and easy-to-use. It has a responsive 12 column grid, ready to use built-in forms and buttons.</p>
           <a href="https://github.com/ummahusla/PotatoCSS/archive/master.zip" class="button success">Download</a>
           <a href="https://github.com/ummahusla/PotatoCSS/" class="button">View on GitHub</a>
           <a href="https://github.com/ummahusla/PotatoCSS/issues" class="button danger">Report a bug</a>
         </div>
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <h4>Features</h4>
           <ul>
             <li><a href="#grid">Grid</a></li>
@@ -92,118 +92,118 @@
     <div id="grid">
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
           <h1 class="font-bold">Grid</h1>
         </div>
       </div>
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
           <p>twelve</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="one-large potatoes">
+        <div class="one potatoes">
           <p>one</p>
         </div>
-        <div class="eleven-large potatoes">
+        <div class="eleven potatoes">
           <p>eleven</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="two-large potatoes">
+        <div class="two potatoes">
           <p>two</p>
         </div>
-        <div class="ten-large potatoes">
+        <div class="ten potatoes">
           <p>ten</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="three-large potatoes">
+        <div class="three potatoes">
           <p>three</p>
         </div>
-        <div class="nine-large potatoes">
+        <div class="nine potatoes">
           <p>nine</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <p>four</p>
         </div>
-        <div class="eight-large potatoes">
+        <div class="eight potatoes">
           <p>eight</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="five-large potatoes">
+        <div class="five potatoes">
           <p>five</p>
         </div>
-        <div class="seven-large potatoes">
+        <div class="seven potatoes">
           <p>seven</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="six-large potatoes">
+        <div class="six potatoes">
           <p>six</p>
         </div>
-        <div class="six-large potatoes">
+        <div class="six potatoes">
           <p>six</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="seven-large potatoes">
+        <div class="seven potatoes">
           <p>seven</p>
         </div>
-        <div class="five-large potatoes">
+        <div class="five potatoes">
           <p>five</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="eight-large potatoes">
+        <div class="eight potatoes">
           <p>eight</p>
         </div>
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <p>four</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="nine-large potatoes">
+        <div class="nine potatoes">
           <p>nine</p>
         </div>
-        <div class="three-large potatoes">
+        <div class="three potatoes">
           <p>three</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="ten-large potatoes">
+        <div class="ten potatoes">
           <p>ten</p>
         </div>
-        <div class="two-large potatoes">
+        <div class="two potatoes">
           <p>two</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="eleven-large potatoes">
+        <div class="eleven potatoes">
           <p>eleven</p>
         </div>
-        <div class="one-large potato">
+        <div class="one potato">
           <p>one</p>
         </div>
       </div>
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
           <p>twelve</p>
         </div>
       </div>
@@ -215,7 +215,7 @@
     <div id="buttons">
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
           <h1 class="font-bold">Buttons</h1>
           <p>Default button classes</p>
           <a href="#" class="button">Default</a>
@@ -224,7 +224,7 @@
           <a href="#" class="button warning">Warning</a>
           <a href="#" class="button danger">Danger</a>
         </div>
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
           <a href="#" class="button full">Default</a>
           <a href="#" class="button full primary">Primary</a>
           <a href="#" class="button full success">Success</a>
@@ -233,7 +233,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="six-large potatoes">
+        <div class="six potatoes">
           <p>Button sizing</p>
           <div>
             <a href="#" class="button small">Small</a>
@@ -246,7 +246,7 @@
             <a href="#" class="button full small danger">Small</a>
           </div>
         </div>
-        <div class="six-large potatoes">
+        <div class="six potatoes">
           <p>Button expanded</p>
           <a href="#" class="button expanded">Expanded</a>
           <a href="#" class="button success expanded">Expanded</a>
@@ -260,7 +260,7 @@
     <div id="typography">
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
 
           <h1 class="font-bold">Typography</h1>
 
@@ -277,7 +277,7 @@
       </div>
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
 
             <p>Paragraph</p>
             <p class="text-justify">
@@ -287,7 +287,7 @@
       </div>
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
 
             <p>Blockquote</p>
 
@@ -307,7 +307,7 @@
       <form>
 
         <div class="row">
-          <div class="twelve-large potatoes">
+          <div class="twelve potatoes">
 
             <h1 class="font-bold">Forms</h1>
 
@@ -318,17 +318,17 @@
         </div>
 
         <div class="row">
-          <div class="four-large potatoes">
+          <div class="four potatoes">
             <label>Input Label
               <input type="text" placeholder="Four potatoes" />
             </label>
           </div>
-          <div class="four-large potatoes">
+          <div class="four potatoes">
             <label>Input Label
               <input type="text" placeholder="Four potatoes" />
             </label>
           </div>
-          <div class="four-large potatoes">
+          <div class="four potatoes">
             <label>Input Label
               <input type="text" placeholder="Four potatoes" />
             </label>
@@ -336,7 +336,7 @@
         </div>
 
         <div class="row">
-          <div class="six-large potatoes">
+          <div class="six potatoes">
             <label>Select option
               <select>
                 <option value="hello">Hello</option>
@@ -346,7 +346,7 @@
               </select>
             </label>
           </div>
-          <div class="six-large potatoes">
+          <div class="six potatoes">
             <label>Select option
               <select>
                 <option value="potato">Potato</option>
@@ -359,7 +359,7 @@
         </div>
 
         <div class="row">
-          <div class="six-large potatoes">
+          <div class="six potatoes">
             <label>Radio buttons</label>
 
             <input id="radioYes" type="radio" name="radio" value="Yes">
@@ -367,7 +367,7 @@
             <input id="radioNo" type="radio" name="radio" value="No">
             <label for="radioNo">No</label>
           </div>
-          <div class="six-large potatoes">
+          <div class="six potatoes">
             <label>Checkbox buttons</label>
 
             <input id="checkbox1" type="checkbox">
@@ -378,7 +378,7 @@
         </div>
 
         <div class="row">
-          <div class="twelve-large potatoes">
+          <div class="twelve potatoes">
             <label>Textarea Label
               <textarea placeholder="Twelve potatoes textarea"></textarea>
             </label>
@@ -386,7 +386,7 @@
         </div>
 
         <div class="row">
-          <div class="twelve-large potatoes">
+          <div class="twelve potatoes">
             <input type="submit" class="button success" value="Submit">
             <input type="submit" class="button danger" value="Reset">
           </div>
@@ -400,13 +400,13 @@
     <div id="lists">
 
       <div class="row">
-        <div class="twelve-large potatoes">
+        <div class="twelve potatoes">
           <h1 class="font-bold">Lists</h1>
         </div>
       </div>
 
       <div class="row">
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <ol>
             <li>Pumpkin Spice Latte</li>
             <li>Green Tea Latte</li>
@@ -417,7 +417,7 @@
             <li>Berry Smoothie</li>
           </ol>
         </div>
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <ul>
             <li>Pumpkin Spice Latte</li>
             <li>Green Tea Latte</li>
@@ -428,7 +428,7 @@
             <li>Berry Smoothie</li>
           </ul>
         </div>
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <ol class="circle-potato">
             <li>Pumpkin Spice Latte</li>
             <li>Green Tea Latte</li>
@@ -442,7 +442,7 @@
       </div>
 
       <div class="row">
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <ul class="alpha-potato">
             <li>Pumpkin Spice Latte</li>
             <li>Green Tea Latte</li>
@@ -453,7 +453,7 @@
             <li>Berry Smoothie</li>
           </ul>
         </div>
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <ol class="roman-potato">
             <li>Pumpkin Spice Latte</li>
             <li>Green Tea Latte</li>
@@ -464,7 +464,7 @@
             <li>Berry Smoothie</li>
           </ol>
         </div>
-        <div class="four-large potatoes">
+        <div class="four potatoes">
           <ul class="square-potato">
             <li>Pumpkin Spice Latte</li>
             <li>Green Tea Latte</li>
@@ -483,7 +483,7 @@
 
   <div id="code">
     <div class="row">
-      <div class="twelve-large potatoes">
+      <div class="twelve potatoes">
         <h1 class="font-bold">Code</h1>
 
         <h3>Inline code</h3>
@@ -512,10 +512,10 @@
   <div id="labels">
 
     <div class="row">
-      <div class="twelve-large potatoes">
+      <div class="twelve potatoes">
         <h1 class="font-bold">Labels</h1>
       </div>
-      <div class="twelve-large potatoes">
+      <div class="twelve potatoes">
         <ul class="inline-potato">
           <li>
             <span class="label">Default</span>
@@ -543,11 +543,11 @@
   <div id="panels">
 
     <div class="row">
-      <div class="twelve-large potatoes">
+      <div class="twelve potatoes">
         <h1 class="font-bold">Panels</h1>
       </div>
       <div class="row">
-        <div class="six-large potatoes">
+        <div class="six potatoes">
           <p>Default panel</p>
           <div class="panel">
             <h3>Panel Default</h3>
@@ -556,7 +556,7 @@
             </p>
           </div>
         </div>
-        <div class="six-large potatoes">
+        <div class="six potatoes">
           <p>Rounded warning panel</p>
           <div class="panel round warning">
             <h3>Panel Warning</h3>
@@ -570,7 +570,7 @@
 
     <div id="footer">
       <div class="row">
-        <div class="text-center twelve-large potatoes">
+        <div class="text-center twelve potatoes">
           <p>Created with potato and love by <a href="https://twitter.com/edvinsantonovs">Edvins Antonovs</a>.</p>
           <p><a href="https://github.com/PotatoCSS/PotatoCSS">GitHub</a> | <a href="https://twitter.com/edvinsantonovs">Twitter</a> | <a href="https://github.com/PotatoCSS/PotatoCSS/blob/master/license.md">MIT License</a></p>
         </div>
