--- a/examples/lists.html
+++ b/examples/lists.html
@@ -1,11 +1,11 @@
 <div id="list-example">
 	<div class="row">
-		<div class="twelve-large potatoes">
+		<div class="twelve potatoes">
 			<h1 class="font-bold">Lists</h1>
 		</div>
 	</div>
 	<div class="row">
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<ol>
 				<li>Pumpkin Spice Latte</li>
 				<li>Green Tea Latte</li>
@@ -16,7 +16,7 @@
 				<li>Berry Smoothie</li>
 			</ol>
 		</div>
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<ul>
 				<li>Pumpkin Spice Latte</li>
 				<li>Green Tea Latte</li>
@@ -27,7 +27,7 @@
 				<li>Berry Smoothie</li>
 			</ul>
 		</div>
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<ol class="circle-potato">
 				<li>Pumpkin Spice Latte</li>
 				<li>Green Tea Latte</li>
@@ -40,7 +40,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<ul class="alpha-potato">
 				<li>Pumpkin Spice Latte</li>
 				<li>Green Tea Latte</li>
@@ -51,7 +51,7 @@
 				<li>Berry Smoothie</li>
 			</ul>
 		</div>
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<ol class="roman-potato">
 				<li>Pumpkin Spice Latte</li>
 				<li>Green Tea Latte</li>
@@ -62,7 +62,7 @@
 				<li>Berry Smoothie</li>
 			</ol>
 		</div>
-		<div class="four-large potatoes">
+		<div class="four potatoes">
 			<ul class="square-potato">
 				<li>Pumpkin Spice Latte</li>
 				<li>Green Tea Latte</li>
