--- a/examples/forms.html
+++ b/examples/forms.html
@@ -1,7 +1,7 @@
 <div id="form-example">
 	<form>
 		<div class="row">
-			<div class="twelve-large potatoes">
+			<div class="twelve potatoes">
 				<h1 class="font-bold">Forms</h1>
 				<label>Input Label
 					<input type="text" placeholder="Twelve potatoes"/>
@@ -9,24 +9,24 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="four-large potatoes">
+			<div class="four potatoes">
 				<label>Input Label
 					<input type="text" placeholder="Four potatoes"/>
 				</label>
 			</div>
-			<div class="four-large potatoes">
+			<div class="four potatoes">
 				<label>Input Label
 					<input type="text" placeholder="Four potatoes"/>
 				</label>
 			</div>
-			<div class="four-large potatoes">
+			<div class="four potatoes">
 				<label>Input Label
 					<input type="text" placeholder="Four potatoes"/>
 				</label>
 			</div>
 		</div>
 		<div class="row">
-			<div class="six-large potatoes">
+			<div class="six potatoes">
 				<label>Select option
 					<select>
 						<option value="hello">Hello</option>
@@ -36,7 +36,7 @@
 					</select>
 				</label>
 			</div>
-			<div class="six-large potatoes">
+			<div class="six potatoes">
 				<label>Select option
 					<select>
 						<option value="potato">Potato</option>
@@ -48,28 +48,28 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="six-large potatoes">
+			<div class="six potatoes">
 				<label>Radio buttons</label>
 				<input id="radioYes" type="radio" name="radio" value="Yes">
 				<label for="radioYes">Yes</label>
 				<input id="radioNo" type="radio" name="radio" value="No">
 				<label for="radioNo">No</label>
 			</div>
-			<div class="six-large potatoes">
+			<div class="six potatoes">
 				<label>Checkbox buttons</label>
 				<input id="checkbox1" type="checkbox"><label for="checkbox1">Checkbox 1</label>
 				<input id="checkbox2" type="checkbox"><label for="checkbox2">Checkbox 2</label>
 			</div>
 		</div>
 		<div class="row">
-			<div class="twelve-large potatoes">
+			<div class="twelve potatoes">
 				<label>Textarea Label
 					<textarea placeholder="Twelve potatoes textarea"></textarea>
 				</label>
 			</div>
 		</div>
 		<div class="row">
-			<div class="twelve-large potatoes">
+			<div class="twelve potatoes">
 				<input type="submit" class="button success" value="Submit">
 				<input type="submit" class="button danger" value="Reset">
 			</div>
