Replaced placeholder images

--- a/examples/index.html
+++ b/examples/index.html
@@ -55,7 +55,7 @@
     <div id="header">
       <div class="row">
         <div class="text-center twelve-large potatoes">
-          <img src="./assets/logo.png" />
+          <img src="logo.png" />
           <h1>PotatoCSS</h1>
           <h3>Simple CSS framework for hackers. Simple as potato.</h3>
         </div>
@@ -580,11 +580,11 @@
       <div class="row">
         <div class="six-large potatoes">
           <p>Image thumbnail</p>
-          <img src="./assets/image-example.jpg" class="img-thumb" alt="Image example"/>
+          <img src="http://via.placeholder.com/200x200" class="img-thumb" alt="Image example"/>
         </div>
         <div class="six-large potatoes">
           <p>Image thumbnail rounded</p>
-          <img src="./assets/image-example.jpg" class="img-thumb round"  alt="Image example"/>
+          <img src="http://via.placeholder.com/200x200" class="img-thumb round"  alt="Image example"/>
         </div>
       </div>
     </div>
