--- a/examples/images.html
+++ b/examples/images.html
@@ -7,11 +7,11 @@
     <div class="row">
       <div class="six-large potatoes">
         <p>Image thumbnail</p>
-        <img src="./assets/image-example.jpg" class="img-thumb" alt="Image example"/>
+        <img src="http://via.placeholder.com/200x200" class="img-thumb" alt="Image example"/>
       </div>
       <div class="six-large potatoes">
         <p>Image thumbnail rounded</p>
-        <img src="./assets/image-example.jpg" class="img-thumb round"  alt="Image example"/>
+        <img src="http://via.placeholder.com/200x200" class="img-thumb round"  alt="Image example"/>
       </div>
     </div>
   </div>
